--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="contents">
             <h3 class="section-title">SKILL</h3>
             <div class="contents-item">
-              <li>現在独学でHTML、CSS、JavaScriptを勉強中</li>
+              <li>現在独学でHTML、CSSを勉強中</li>
             </div>
         </div>
 
